syntax = "proto3";

package dsipe.transfer;

option go_package = "./pb";

message Chunk {
    int32 file_number = 1;
    bytes content = 2;
}